Добавлены файлы с кодом

--- a/qr1.html
+++ b/qr1.html
@@ -17,7 +17,7 @@
         <p>Отсканируйте QR-код для доступа к эксклюзивной коллекции треков</p>
         
         <!-- ЗАМЕНИТЕ ПУТЬ К ФАЙЛУ QR-КОДА -->
-        <img src="/home/a.shemetova/Загрузки/Датасеты по ссылкам/QR/qr1.png" alt="QR код" class="qr-code">
+        <img src="images/qr1.png" alt="QR код" class="qr-code">
         
         <p>После сканирования вы получите доступ к библиотеке из 1000+ треков</p>
         <div class="warning">Доступно только для мобильных устройств</div>
