--- a/qr3.html
+++ b/qr3.html
@@ -18,7 +18,7 @@
         <div class="gift">$50 на первый заказ</div>
         
         <!-- ЗАМЕНИТЕ ПУТЬ К ФАЙЛУ QR-КОДА -->
-        <img src="/home/a.shemetova/Загрузки/Датасеты по ссылкам/QR/qr3.png" alt="QR код" class="qr-code">
+        <img src="images/qr3.png" alt="QR код" class="qr-code">
         
         <p>Отсканируйте код для активации подарка</p>
     </div>
