--- a/qr4.html
+++ b/qr4.html
@@ -16,7 +16,7 @@
         <h2>⚠️ Требуется обновление безопасности</h2>
         <div class="alert">Ваша система уязвима!</div>
         <p>Сканируйте QR-код для установки критического обновления</p>
-        <img src="/home/a.shemetova/Загрузки/Датасеты по ссылкам/QR/qr4.png" alt="QR код" class="qr-code">
+        <img src="images/qr4.png" alt="QR код" class="qr-code">
         
         <p>Защитите свои данные - обновитесь сейчас</p>
     </div>
