--- a/qr6.html
+++ b/qr6.html
@@ -18,7 +18,7 @@
         <div class="discount">-70% НА ВСЁ</div>
         <p>Только для вас! Акция действует:</p>
         <div class="timer">⏰ 2 часа 43 минуты</div>
-        <img src="/home/a.shemetova/Загрузки/Датасеты по ссылкам/QR/qr6.png" alt="QR код" class="qr-code">
+        <img src="images/qr6.png" alt="QR код" class="qr-code">
         
         <p>Отсканируйте для активации скидки</p>
     </div>
