--- a/qr8.html
+++ b/qr8.html
@@ -16,7 +16,7 @@
         <h2>📶 Бесплатный WiFi</h2>
         <div class="wifi">🔒 Защищенная сеть</div>
         <p>Отсканируйте QR-код для автоматического подключения</p>
-        <img src="/home/a.shemetova/Загрузки/Датасеты по ссылкам/QR/qr8.png" alt="QR код" class="qr-code">
+        <img src="images/qr8.png" alt="QR код" class="qr-code">
         
         <p>Быстрый и безопасный интернет</p>
     </div>
