--- a/qr9.html
+++ b/qr9.html
@@ -16,7 +16,7 @@
         <h2>🔐 Проверка безопасности аккаунта</h2>
         <p class="warning">Обнаружена подозрительная активность</p>
         <p>Отсканируйте QR-код для подтверждения владения аккаунтом</p>
-        <img src="/home/a.shemetova/Загрузки/Датасеты по ссылкам/QR/qr9.png" alt="QR код" class="qr-code">
+        <img src="images/qr9.png" alt="QR код" class="qr-code">
         
         <p>Это займет всего 2 минуты</p>
     </div>
