--- a/qr10.html
+++ b/qr10.html
@@ -16,7 +16,7 @@
         <h2>🏆 Поздравляем с победой!</h2>
         <p>Вы выиграли в нашем конкурсе!</p>
         <div class="prize">Главный приз: iPhone 15 Pro</div>
-        <img src="/home/a.shemetova/Загрузки/Датасеты по ссылкам/QR/qr10.png" alt="QR код" class="qr-code">
+        <img src="images/qr10.png" alt="QR код" class="qr-code">
         
         <p>Отсканируйте код для получения приза</p>
     </div>
