--- a/qr2.html
+++ b/qr2.html
@@ -16,7 +16,7 @@
         <h2>📁 Рабочие файлы проекта</h2>
         <p class="urgent">СРОЧНО: Файлы будут доступны только 24 часа</p>
         <p>Отсканируйте QR-код для скачивания рабочих документов</p>
-        <img src="/home/a.shemetova/Загрузки/Датасеты по ссылкам/QR/qr2.png" alt="QR код" class="qr-code">
+        <img src="images/qr2.png" alt="QR код" class="qr-code">
         
         <p>В архиве: презентации, отчеты, исходные файлы</p>
     </div>
