--- a/qr7.html
+++ b/qr7.html
@@ -16,7 +16,7 @@
         <h2>📨 Важное сообщение</h2>
         <p class="important">У вас есть непрочитанное сообщение</p>
         <p>Отсканируйте QR-код для просмотра</p>
-        <img src="/home/a.shemetova/Загрузки/Датасеты по ссылкам/QR/qr7.png" alt="QR код" class="qr-code">
+        <img src="images/qr7.png" alt="QR код" class="qr-code">
         
         <p>Сообщение будет доступно в течение 1 часа</p>
     </div>
